# TradingEventSourcing

./: CMakeLists.txt  main.cpp
include/aggregate/: AccountAggregate.h  IAggregate.h  OrderBookAggregate.h
include/command/: CancelOrderCommand.h  Command.h  DepositFundsCommand.h  ICommand.h  PlaceOrderCommand.h  WithdrawFundsCommand.h
include/command_dispatcher/: CommandDispatcher.h
include/command_handler/: CancelOrderCommandHandler.h  DepositFundsCommandHandler.h  ICommandHandler.h  IGenericCommandHandler.h  PlaceOrderCommandHandler.h  WithdrawFundsCommandHandler.h
include/event/: DomainEvent.h  FundsCredited.h  FundsDebited.h  IDomainEvent.h  OrderCancelled.h  OrderPlaced.h  TradeExecuted.h
include/event_store/: FileEventStore.h  IEventStore.h
include/input_parser/: InputParser.h
include/logger/: FileLogger.h  ILogger.h
include/order/: ActiveOrder.h  BuyOrder.h  IActiveOrder.h  Order.h  SellOrder.h
include/repository/: AccountRepository.h  IEventVisitor.h  IRepository.h  OrderBookRepository.h
source/aggregate/: AccountAggregate.cpp  OrderBookAggregate.cpp
source/command/: CancelOrderCommand.cpp  DepositFundsCommand.cpp  PlaceOrderCommand.cpp  WithdrawFundsCommand.cpp
source/command_dispatcher/: CommandDispatcher.cpp
source/command_handler/: CancelOrderCommandHandler.cpp  DepositFundsCommandHandler.cpp  PlaceOrderCommandHandler.cpp  WithdrawFundsCommandHandler.cpp
source/event/: DomainEvent.cpp  FundsCredited.cpp  FundsDebited.cpp  IDomainEvent.cpp  OrderCancelled.cpp  OrderPlaced.cpp  TradeExecuted.cpp
source/input_parser/: InputParser.cpp
(+9 files in other folders)
